Fix wrap issue

--- a/admin/themes/default/sass/partials/_kpi.sass
+++ b/admin/themes/default/sass/partials/_kpi.sass
@@ -61,8 +61,6 @@ $kpi-gap: 10px
 				min-width: 200px
 
 @media (max-width: $screen-desktop)
-	.kpi-container .kpis-wrap .kpi-wrap
-		flex-grow: 1
 	&.no-wrapping
 		.kpis-wrap
 			flex-wrap: nowrap !important
